--- a/less/style.less
+++ b/less/style.less
@@ -31,11 +31,95 @@ ul{
 	list-style-type:none;
 	margin:0;
 	padding:0;
-}	
+}
 
-
-
-
+.main-container {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+.left-bar{
+  background: #222752 none repeat scroll 0 0;
+  height: 100%;
+  padding: 0 19px;
+  position: absolute;
+  width: 350px;
+  z-index: 8;
+  left:0;
+  &:extend(.transition);
+  &.open{
+	left:-350px;
+  }
+  form{
+	padding: 30px 0;
+  }
+  .form-group{
+	margin-bottom: 15px;
+	&.big{
+	  margin: 0 0 50px;
+	  label{
+		font-size: 17px;
+	  }
+	  input{
+		font-weight:bold;
+	  }
+	}
+	label{
+	  color: #fff;
+	  float: left;
+	  font-family: Georgia;
+	  font-weight: normal;
+	  width: 40%;
+	  margin: 3px 0;
+	}
+	input{
+	  color: #000;
+	  font-family: Georgia;
+	  font-size: 17px;
+	  font-weight: 500;
+	  height: 26px;
+	  padding: 0 4px;
+	  width: 60%;
+	}
+  }
+}
+.display-bar{
+  background: #f4f4f4 none repeat scroll 0 0;
+  float: left;
+  height: 500px;
+  padding-left: 350px;
+  position: relative;
+  width: 100%;
+  &:extend(.transition);
+  &.open{
+	padding-left:0;
+  }
+  header{
+	display: inline-block;
+	padding: 10px 20px;
+	width: 100%;
+	.toggle{
+	  float: left;
+	  margin: 20px 10px 20px -18px;
+	  padding: 10px 0;
+	  cursor: pointer;
+	}
+	.logo{
+	  display: inline-block;
+	  width: 150px;
+	  	img{
+		  width: 100%;
+		}
+	}
+	span{
+	  float: right;
+	  font-size: 20px;
+	  font-weight: 600;
+	  margin: 24px 0;
+	}
+  }
+}
 
 
 
