--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,3 +5,11 @@
 	background:red;
 }
 
+
+.transition{
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  -ms-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
