--- a/less/style.less
+++ b/less/style.less
@@ -10,13 +10,15 @@
 *{
 	outline:none !important;
 }
+
 body
 {
 	margin:0;
 	padding:0;
 	outline:none;
-	font-family:Open Sans;
+ 	font-family: calibri;
 }
+
 a
 {
 	color:#333;
@@ -42,7 +44,7 @@ ul{
 .left-bar{
   background: #222752 none repeat scroll 0 0;
   height: 100%;
-  left: 0;
+  left: -350px;
   overflow: auto;
   padding: 0 19px;
   position: absolute;
@@ -50,7 +52,7 @@ ul{
   z-index: 8;
   &:extend(.transition);
   &.open{
-	left:-350px;
+	left:0;
   }
   form{
 	padding: 30px 0;
@@ -62,7 +64,7 @@ ul{
 	  label{
 		font-size: 17px;
 	  }
-	  input{
+	  input,select{
 		font-weight:bold;
 	  }
 	}
@@ -73,7 +75,7 @@ ul{
 	  width: 40%;
 	  margin: 3px 0;
 	}
-	input{
+	input,select{
 	  color: #555;
 	  font-size: 14px;
 	  font-weight: 500;
@@ -87,16 +89,16 @@ ul{
   }
 }
 .display-bar{
-  background: #f4f4f4 none repeat scroll 0 0;
+  background: #fff none repeat scroll 0 0;
   float: left;
   height: 100%;
   overflow: auto;
-  padding-left: 350px;
+  padding-left: 0;
   position: absolute;
   width: 100%;
   &:extend(.transition);
   &.open{
-	padding-left:0;
+	padding-left:350px;
   }
   header{
 	display: inline-block;
@@ -110,14 +112,14 @@ ul{
 	}
 	.logo{
 	  display: inline-block;
-	  width: 150px;
+	  width: 240px;
 	  	img{
 		  width: 100%;
 		}
 	}
 	span{
 	  float: right;
-	  font-size: 20px;
+	  font-size: 17px;
 	  font-weight: 600;
 	  margin: 24px 0;
 	}
@@ -126,6 +128,7 @@ ul{
 .nav-bar{
   background: #fff none repeat scroll 0 0;
   border: 1px solid #e7e7e7;
+  box-shadow: 0 0 8px #e8e8e8;
   display: inline-block;
   margin-top: 11px;
   width: 100%;
@@ -164,7 +167,7 @@ ul{
 	width:100% !important;
   }
   &.padding{
-	padding: 16px 20px;
+	padding: 0;
   }
   h2{
 	color: #333;
@@ -173,12 +176,13 @@ ul{
   }
 
   .table{
-	border-bottom: 1px solid #5a5a5a;
+	border-bottom: 2px solid #fff;
 	.popover{
 	  background:#FFE721;
 	  font-size:12px;
 	  position:absolute;
-	  margin-left:-6px;
+	  margin-left:10px;
+	  margin-top:-10px;
 	  .arrow:after{
 		border-right-color :#FFE721;
 	  }
@@ -186,33 +190,24 @@ ul{
 	thead{
 	  tr{
 		th{
-		  color: #6c6c6c;
-		  font-weight: 700;
-		}
-
-	  }
-	}
-	tbody{
-	  tr{
-		td{
-		  border-top: 1px solid #cacaca;
-		  color: #000000;
-		  font-size: 15px;
-		  padding: 6px 5px;
-		  span{
-
-			position:relative;
-			display:inline-block;
-			width:100%;
-			&[data-toggle="popover"]:after
-			{
-			  border-right: 9px solid transparent;
-			  border-top: 8px solid red;
-			  content: "";
-			  position: absolute;
-			  right: 0;
-			  top: 0;
-			  transform: rotate(90deg);
+		  font-size: 24px;
+		  font-weight: 600;
+		  padding: 10px 5px;
+		  cursor: pointer;
+		  sup{
+			font-weight: 400;
+			margin-left: 7px;
+		  }
+		  i{
+			background: transparent url("../images/right-arrow.png") no-repeat scroll 0 0;
+			display: inline-block;
+			height: 14px;
+			margin-right: 4px;
+			transform: translate(-3px, 0px);
+			width: 14px;
+			background-size:100% auto;
+			&.open{
+			  transform: translate(-3px, 0px) rotate(90deg);
 			}
 		  }
 		}
@@ -221,12 +216,33 @@ ul{
 		  th{
 			border-bottom: 1px solid #aaafaf;
 			border-top: 1px solid #aaafaf;
+			i{
+			  background:none;
+
+			}
 		  }
 		}
 	  }
+	}
+	tbody{
+	  display: none;
+	  tr{
+		td{
+		  border-top: 1px solid #cacaca;
+		  color: #000000;
+		  font-size: 16px;
+		  padding: 6px 5px;
+		  span{
+			position:relative;
+			display:inline-block;
+			width:100%;
+		  }
+		}
+
+	  }
 	  tr.inner-row{
 		td{
-		  font-size: 13px;
+		  font-size: 15px;
 		  padding-left:4px 15px;
 		}
 		td:first-child{
@@ -234,17 +250,7 @@ ul{
 		}
 
 	  }
-	  tr:first-child{
-		th{
-		  font-size: 21px;
-		  font-weight: 600;
-		  padding: 10px 5px;
-		  sup{
-			font-weight: 400;
-			margin-left: 7px;
-		  }
-		}
-	  }
+
 	}
   }
 }
@@ -257,7 +263,7 @@ ul{
   margin-bottom: 15px;
   overflow-y: hidden;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  border: 1px solid #ddd;
+
 }
 .table-responsive > .table {
   margin-bottom: 0;
@@ -350,6 +356,7 @@ ul{
 }
 footer{
   background: #fff none repeat scroll 0 0;
+  box-shadow: 0 0 4px #aaaaaa;
   display: inline-block;
   margin: 25px 0;
   padding: 20px;
@@ -360,19 +367,14 @@ footer{
 	width: 100%;
 	img{
 	  float: right;
-	  width: 150px;
+	  width: 120px;
 	}
   }
 }
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
-  .display-bar {
-	left:263px;
-	padding-left: 0;
-  }
   .display-bar.open {
-	padding-left: 0;
-	left:0px;
+	padding-left: 270px;
   }
 
   .left-bar {
@@ -394,7 +396,7 @@ footer{
 	margin: 20px 10px 20px -28px;
   }
   .display-bar header .logo {
-	width: 140px;
+	width: 190px;
   }
   .nav-bar ul li a {
 	font-size: 14px;
@@ -410,6 +412,7 @@ footer{
   }
   .left-bar .form-group input {
 	width: 100%;
+
   }
   .left-bar .form-group {
 	margin-bottom: 8px;
@@ -423,7 +426,10 @@ footer{
 	padding: 8px 10px;
   }
   .display-bar header span {
-	font-size: 18px;
+	font-size: 15px;
+  }
+  .right-bar canvas {
+	width: 90% !important;
   }
 }
 @media (min-width: 992px) {
@@ -436,7 +442,7 @@ footer{
 	padding: 10px;
   }
   .display-bar header span {
-	font-size: 20px;
+	font-size: 17px;
   }
   .content-box h2 {
 	font-size: 22px;
