--- a/less/style.less
+++ b/less/style.less
@@ -247,10 +247,20 @@ ul{
 	  tr.inner-row{
 		td{
 		  font-size: 15px;
-		  padding-left:4px 15px;
+		  padding:6px 5px;
 		}
+
 		td:first-child{
 		  padding-left:15px;
+		}
+	  }
+	  tr.inner-row-2{
+		td{
+		  font-size: 14px;
+		  padding:6px 5px;
+		}
+		td:first-child{
+		  padding-left:25px;
 		}
 	  }
 	}
