--- a/less/style.less
+++ b/less/style.less
@@ -180,8 +180,6 @@ ul{
   }
 
   .table{
-	margin-bottom: -1px !important;
-	margin-top: -1px;
 	.popover{
 	  background:#FFE721;
 	  font-size:12px;
@@ -195,10 +193,11 @@ ul{
 	thead{
 	  tr{
 		th{
+		  cursor: pointer;
 		  font-size: 24px;
 		  font-weight: 600;
+		  max-width: 0;
 		  padding: 10px 5px;
-		  cursor: pointer;
 		  sup{
 			font-weight: 400;
 			margin-left: 7px;
@@ -236,6 +235,7 @@ ul{
 		  border-top: 1px dotted #b9b9b9;
 		  color: #000000;
 		  font-size: 16px;
+		  max-width: 0;
 		  padding: 6px 5px;
 		  span{
 			position:relative;
@@ -287,53 +287,7 @@ ul{
 	}
   }
 }
-.table-responsive {
-  overflow-x: auto;
-  min-height: 0.01%;
-  border-bottom: 1px solid #808080;
-  border-top: 1px solid #808080;
-  width: 100%;
-  margin-bottom: 15px;
-  overflow-y: hidden;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
 
-}
-.table-responsive > .table {
-  margin-bottom: 0;
-}
-.table-responsive > .table > thead > tr > th,
-.table-responsive > .table > tbody > tr > th,
-.table-responsive > .table > tfoot > tr > th,
-.table-responsive > .table > thead > tr > td,
-.table-responsive > .table > tbody > tr > td,
-.table-responsive > .table > tfoot > tr > td {
-  white-space: nowrap;
-}
-.table-responsive > .table-bordered {
-  border: 0;
-}
-.table-responsive > .table-bordered > thead > tr > th:first-child,
-.table-responsive > .table-bordered > tbody > tr > th:first-child,
-.table-responsive > .table-bordered > tfoot > tr > th:first-child,
-.table-responsive > .table-bordered > thead > tr > td:first-child,
-.table-responsive > .table-bordered > tbody > tr > td:first-child,
-.table-responsive > .table-bordered > tfoot > tr > td:first-child {
-  border-left: 0;
-}
-.table-responsive > .table-bordered > thead > tr > th:last-child,
-.table-responsive > .table-bordered > tbody > tr > th:last-child,
-.table-responsive > .table-bordered > tfoot > tr > th:last-child,
-.table-responsive > .table-bordered > thead > tr > td:last-child,
-.table-responsive > .table-bordered > tbody > tr > td:last-child,
-.table-responsive > .table-bordered > tfoot > tr > td:last-child {
-  border-right: 0;
-}
-.table-responsive > .table-bordered > tbody > tr:last-child > th,
-.table-responsive > .table-bordered > tfoot > tr:last-child > th,
-.table-responsive > .table-bordered > tbody > tr:last-child > td,
-.table-responsive > .table-bordered > tfoot > tr:last-child > td {
-  border-bottom: 0;
-}
 .right-bar{
 
   display: inline-block;
@@ -392,6 +346,7 @@ ul{
 	}
   }
 }
+
 
 .padding{
   padding: 0 30px;
