index page done

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,7 +5,10 @@
 	background:red;
 }
 
-
+.blockin{
+  display:inline-block;
+  width:100%;
+}
 .transition{
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
