--- a/less/style.less
+++ b/less/style.less
@@ -234,22 +234,40 @@ ul{
 	  float: right;
 	  text-align: right;
 	  .top-links{
-		color:Red;
 		a{
-		  background: #e6e6e6 none repeat scroll 0 0;
-		  border-radius: 50%;
-		  color: #3675b4;
 		  display: inline-block;
-		  font-size: 17px;
-		  height: 32px;
-		  margin-left: 5px;
-		  padding: 4px 0;
-		  text-align: center;
-		  width: 32px;
-		  &:hover,&.active{
-			background: #3675b4 none repeat scroll 0 0;
-			color:#fff;
-
+		  height: 34px;
+		  margin-left: 7px;
+		  width: 34px;
+		  i{
+			background: transparent none repeat scroll 0 0 / cover ;
+			display: inline-block;
+			height: 32px;
+			width: 32px;
+			&.icon_home{
+			  background-image:url("../images/iconsCartoon/icon_home.png");
+			  &:hover{
+				background-image:url("../images/iconsCartoon/icon_homehover.png");
+			  }
+			}
+			&.icon_floorplan2D{
+			  background-image:url("../images/iconsCartoon/icon_floorplan2D.png");
+			  &:hover{
+				background-image:url("../images/iconsCartoon/icon_floorplan2Dhover.png");
+			  }
+			}
+			&.icon_floorplanList{
+			  background-image:url("../images/iconsCartoon/icon_floorplanList.png");
+			  &:hover{
+				background-image:url("../images/iconsCartoon/icon_floorplanListhover.png");
+			  }
+			}
+			&.icon_logout{
+			  background-image:url("../images/iconsCartoon/icon_logout.png");
+			  &:hover{
+				background-image:url("../images/iconsCartoon/icon_logouthover.png");
+			  }
+			}
 		  }
 		}
 	  }
@@ -273,6 +291,7 @@ ul{
   background: #fff none repeat scroll 0 0;
   margin: -40px -60px;
   padding: 0 0 40px;
+  height:220px;
 }
 
 .gray-box{
@@ -313,43 +332,55 @@ ul{
 	  }
 	}
 	ul{
-	  height: 424px;
+	  height: 420px;
 	  overflow: hidden;
 	  li{
 		border-bottom: 1px solid #e2e2e2;
-		border-left: 14px solid #aaa;
 		font-size: 21px;
-		padding: 9px 13px;
-		&.success{
-		  border-left: 14px solid #ACD651;
-		}
-		&.info{
-		  border-left: 14px solid #949FB1;
-		}
-		&.warning{
-		  border-left: 14px solid #46BFBD;
-		}
-		&.danger{
-		  border-left: 14px solid #FDB45C;
-		}
+		padding: 0;
+		&:extend(.blockin);
 		&>i{
-		  border: 1px solid #d4d4d4;
-		  border-radius: 50%;
-		  color: #c5c5c5;
+		  color: #fff;
 		  font-size: 18px;
-		  height: 34px;
+		  height: 41px;
 		  margin-right: 12px;
-		  padding: 8px 10px;
+		  padding: 13px 8px;
 		  text-align: center;
-		  width: 34px;
+		  width: 41px;
+		  &:first-child{
+			background: #46bfbd none repeat scroll 0 0 / cover ;
+			display: inline-block;
+			padding: 6px 21px;
+			vertical-align: middle;
+		  }
+			&.success{
+			  background-color:#ABD153;
+			  background-image: url("../images/iconsCartoon/icon_sustainability.png");
+			}
+			&.info{
+			  background-color: #949FB1;
+			  background-image: url("../images/iconsCartoon/icon_safety.png");
+			}
+			&.warning{
+			  background-color:#41C0BD;
+			  background-image: url("../images/iconsCartoon/icon_health.png");
+			}
+			&.danger{
+			  background-color:#FBB45D;
+			  background-image: url("../images/iconsCartoon/icon_finance.png");
+			}
+			&.stop{
+			  background-color:#AE80B9;
+			  background-image: url("../images/iconsCartoon/icon_usability.png");
+			}
 		  &:last-child{
 			border: medium none;
 			color: #3675b4;
-			float: right;
-			font-size: 34px;
-			margin-right: 0;
-			padding: 0;
 			cursor: pointer;
+			float: right;
+			font-size: 32px;
+			margin-right: 3px;
+			padding: 6px 0;
 		  }
 		}
 	  }
@@ -614,7 +645,7 @@ footer{
 	height: 614px;
   }
   .gray-box .notification-sheet ul {
-	height: 424px;
+	height: 420px;
   }
   .charts-list .chart-list-item .piechart .ch-pre .title {
 	font-size: 30px;
